log
Wed 24 Apr 2024 11:54:14 PM UTC: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
6520f36
Thu 25 Apr 2024 12:04:38 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
7b5ed82
Thu 25 Apr 2024 12:06:21 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:60:12: error: ‘*map.buckets’ is used uninitialized [-Werror=uninitialized]
   60 |     if (map->buckets[i] != NULL) return 0;
      |         ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6b09b69
Thu 25 Apr 2024 12:07:15 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:41: error: returning ‘int’ from a function with return type ‘HashMap *’ {aka ‘struct HashMap *’} makes pointer from integer without a cast [-Werror=int-conversion]
   60 |     if (map->buckets[i] == NULL) return 1;
      |                                         ^
hashmap.c:60:12: error: ‘*map.buckets’ is used uninitialized [-Werror=uninitialized]
   60 |     if (map->buckets[i] == NULL) return 1;
      |         ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8ea942c
Thu 25 Apr 2024 12:07:31 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:41: error: returning ‘int’ from a function with return type ‘HashMap *’ {aka ‘struct HashMap *’} makes pointer from integer without a cast [-Werror=int-conversion]
   60 |     if (map->buckets[i] == NULL) return -1;
      |                                         ^
hashmap.c:60:12: error: ‘*map.buckets’ is used uninitialized [-Werror=uninitialized]
   60 |     if (map->buckets[i] == NULL) return -1;
      |         ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ecd42ed
Thu 25 Apr 2024 12:08:02 AM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:59:12: error: ‘*map.buckets’ is used uninitialized [-Werror=uninitialized]
   59 |     if (map->buckets != NULL) return 0;
      |         ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6252764
Thu 25 Apr 2024 12:08:18 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘createMap’:
hashmap.c:59:13: error: ‘*map.buckets’ is used uninitialized [-Werror=uninitialized]
   59 |     if (*map->buckets != NULL) return 0;
      |          ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
b576a27
Thu 25 Apr 2024 12:11:32 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
f7723b9
Thu 25 Apr 2024 12:15:35 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:61:12: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   61 |         map->buckets[i] = NULL;
      |         ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
649deb6
Thu 25 Apr 2024 12:16:01 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9002031
Thu 25 Apr 2024 12:17:07 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:18: error: returning ‘int’ from a function with return type ‘HashMap *’ {aka ‘struct HashMap *’} makes pointer from integer without a cast [-Werror=int-conversion]
   63 |           return 1;
      |                  ^
hashmap.c:61:16: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   61 |         if (map->buckets[i] == NULL)
      |             ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0975586
Thu 25 Apr 2024 12:20:43 AM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
1e90330
Thu 25 Apr 2024 12:24:52 AM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  1|5
total_score: 10/70
5edbeb5
Fri 26 Apr 2024 11:05:43 PM UTC: 
 hashmap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:65:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   65 |     return NULL;
      |            ^~~~
hashmap.c:42:6: note: declared here
   42 | void insertMap(HashMap * map, char * key, void * value)
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dac42a2
Fri 26 Apr 2024 11:14:02 PM UTC: 
 hashmap.c | 24 ++++++++++++++----------
 1 file changed, 14 insertions(+), 10 deletions(-)
 tests:  1|5
total_score: 10/70
e0c706e
Fri 26 Apr 2024 11:14:45 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
7fbe441
Fri 26 Apr 2024 11:15:52 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
fe2241f
